<resources>
    <string name="app_name">PokemonWiki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="numeroPokedex">NumeroPokedex</string>
    <string name="pokemonName">PokemonName</string>
    <string name="tipoPokemon1">TipoPokemon1</string>
    <string name="tipoPokemon2">TipoPokemon2</string>
    <string name="regiaoPokemon">RegiaoPokemon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>

</resources>
