<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Spinner
        android:id="@+id/choosePokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:prompt="@string/pokemonName"></Spinner>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="104dp"
        android:text="#" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/pokedex"
        android:text="Tipo1: " />

    <TextView
        android:id="@+id/type1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pokedex"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/tipoPokemon1" />

    <TextView
        android:id="@+id/pokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginStart="10dp"
        android:text="@string/numeroPokedex"></TextView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:text="Tipo2: " />

    <TextView
        android:id="@+id/type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/tipoPokemon2" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type2"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/regiaoPokemon"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/region"
        android:layout_alignTop="@+id/region"
        android:text="Região: "
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="294dp" />


</RelativeLayout>